# ai-mock-interviewer

./: .gitignore  DATABASE_SCHEMA.md  README.md  pyproject.toml
backend/: requirements.txt
backend/app/: config.py  logging_utils.py  main.py
backend/app/agents/: InterviewerAgents.py  models.py
backend/app/database/: __init__.py  session.py
backend/app/helpers/: audio_helpers.py  graph_state_helpers.py  prompt_eng_helpers.py
backend/app/repositories/: __init__.py  applicant_cv_repository.py  applicant_graph_state_repository.py  applicant_job_profile_repository.py  applicant_repository.py  conversation_repository.py  session_repository.py
backend/app/routers/: __init__.py  applicant_router.py  chat_router.py  system_router.py
backend/app/services/: __init__.py  applicant_cv_service.py  applicant_job_profile_service.py  applicant_service.py  document_service.py  health_service.py  interview_review_service.py  session_service.py  status_service.py  transcribe_service.py
backend/app/workflows/: interviewer_workflow.py  workflow-diagram.md
backend/tests/: test_api.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  ApplicantConfirmationModal.jsx  CvModal.jsx  CvVersionSelection.jsx  JobProfileModal.jsx  SessionSelection.jsx  styles.css
frontend/src/modals/: ApplicantModal.jsx  CvVersionModal.jsx  InterviewReviewModal.jsx  SessionModal.jsx
