[project]
name = "interview-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "faster-whisper>=1.2.1",
    "langgraph>=1.2.6",
    "numpy>=2.4.6",
    "openai>=2.44.0",
    "pydantic-ai>=2.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sounddevice>=0.5.5",
    "supabase>=2.31.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.10.1",
]
